--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
 	<li>
 		<h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
 	</li>
+	<app-button text="Click"></app-button>
 	<pre>{{env | json}}</pre>
 </ul>
 
